fixed error in testing